istio-two/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: service-two
spec:
  replicas: 1
  strategy:
    canary:
      canaryService: service-two-canary
      stableService: service-two-stable
      trafficRouting:
        istio:
          virtualService:
            name: service-two-vsvc
            routes:
            - primary # At least one route is required
      steps:
      - setWeight: 50
      - analysis:
          templates:
          - templateName: success-rate
      - pause: {}
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: service-two
  template:
    metadata:
      labels:
        app: service-two
        istio-injection: enabled
    spec:
      containers:
      - name: service-two
        image: argoproj/rollouts-demo:red
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        resources:
          requests:
            memory: 32Mi
            cpu: 5m
