istio-two/virtualsvc.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-two-vsvc
spec:
  gateways:
  - service-two-gateway
  hosts:
  - service-two.local
  http:
  - name: primary
    route:
    - destination:
        host: service-two-stable
      weight: 100
    - destination:
        host: service-two-canary
      weight: 0
